--- a/src/components/Start/Start.module.css
+++ b/src/components/Start/Start.module.css
@@ -24,7 +24,7 @@
     gap: 10px;
   }
 
-button{
+.button{
 width: 304px;
 height: 40px;
 background:1px solid #D4D4D4;
@@ -32,7 +32,7 @@ border-radius: 6px;
 border: none;
   }
 
- input{
+ .input{
 box-sizing: border-box;
 padding: 8px 12px;
 width: 304px;
