--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,7 +1,7 @@
 .wrapper {
-    min-height: 100%;
-    display: flex;
-    grid-template-rows: var(--spacing-16, 64px) 1fr;
-    flex-direction: column;
+  height: 1000px;
+  padding: 40px;
+  border-radius: 8px;
+  background-color: white;
   }
   
