--- a/src/components/Storage/components/ErrorList/ErrorList.module.css
+++ b/src/components/Storage/components/ErrorList/ErrorList.module.css
@@ -34,5 +34,13 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color:rgba(137, 82, 224, 1);
+  color: white;
+}
+.error{
+    color: red;
+}
+
+.error input {
+    border: 3px solid red;
 }
